<resources>
    <string name="app_name">DiaBEATit</string>
    <string name="chart_label_bg">CGM</string>
    <string name="chart_label_basal">Basal</string>
    <string name="chart_label_bolus">Bolus</string>
    <string name="chart_label_carbs">Carbs</string>
    <string name="graphLabelFormat">HH</string>
    <string name="nav_header_title">DiaBEATit</string>
    <string name="nav_header_subtitle">diabeatit.de</string>
    <string name="nav_assistant">Assistant</string>
    <string name="nav_log">Event Log</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_manual">Online Manual</string>
    <string name="mc_title">Add Carbs Intake</string>
    <string name="mc_input_hint">Carbs</string>
    <string name="mc_notes_hint">Notes</string>
    <string name="mc_picture_attach">Attach Picture</string>
    <string name="mc_save">Save</string>
    <string name="mc_event_title">Carbs</string>
    <string name="mi_title">Add Insulin Bolus</string>
    <string name="mi_input_hint">Bolus</string>
    <string name="mi_notes_hint">Notes</string>
    <string name="mi_save">Save</string>
    <string name="mi_event_title">Bolus</string>
    <string name="mb_save">Save</string>
    <string name="mb_event_minutes">%1$.2f I.E. for %2$.1f minutes</string>
    <string name="mb_event_title">Temp Basal</string>
    <string name="mg_title">Add Glucose Reading</string>
    <string name="mg_input_hint">Blood Glucose</string>
    <string name="mg_notes_hint">Notes</string>
    <string name="mg_save">Save</string>
    <string name="mg_event_title">Blood Glucose</string>
    <string name="ms_title">Add Exercise Unit</string>
    <string name="ms_input_hint">Description</string>
    <string name="ms_duration_title">Duration (minutes)</string>
    <string name="ms_duration_hint">Duration</string>
    <string name="ms_duration_ok">Done</string>
    <string name="ms_duration_cancel">Cancel</string>
    <string name="ms_save">Save</string>
    <string name="ms_event_minutes">%1$.1f minutes, %2$s intensity</string>
    <string name="ms_event_title">Exercise</string>
    <string name="ms_intensity_unknown">unknown</string>
    <string name="ms_intensity_low">low</string>
    <string name="ms_intensity_mid">medium</string>
    <string name="ms_intensity_high">high</string>
    <string name="mn_title">Add Note</string>
    <string name="mn_notes_hint">Text</string>
    <string name="mn_picture_attach">Attach Picture</string>
    <string name="mn_save">Save</string>
    <string name="mn_event_title">Note</string>
    <string name="diary_pred_event_text">ADD SOME INFO HERE? GRAPH?</string>
    <string name="diary_pred_event_title">Prediction</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_sync_title">Sync</string>
    <string name="settings_prediction_title">Prediction Settings</string>
    <string name="setting_general_title">General</string>
    <string name="settings_help_title">Help</string>
    <string name="setting_demo_title">Demo Mode</string>
    <string name="setting_demo_summary">Demonstration with fake data</string>
    <string name="settings_help_feedback_title">Send feedback</string>
    <string name="settings_help_feedback_summary">Report technical issues or suggest new features</string>
    <string name="settings_help_version_title">Build version</string>
    <string name="settings_help_license_title">License</string>
    <string name="settings_help_license_summary">Show end-user license</string>
    <string name="settings_help_osslicense_summary">Shows open-source licenses</string>
    <string name="settings_help_osslicense_title">Open-source Licenses</string>
    <string name="settings_help_manual_summary">Open app manual</string>
    <string name="settings_help_manual_title">Manual</string>
    <string name="settings_sync_ns_rationale">Scheduled sync in background.</string>
    <string name="settings_sync_ns_download_summary">Download Nightscout data every hour</string>
    <string name="settings_sync_ns_download_title">Periodic Download</string>
    <string name="settings_sync_ns_title">Nightscout</string>
    <string name="settings_sync_ns_url_title">Connection URL</string>
    <string name="settings_sync_ns_url_summary">e.g. https://user.ns.10be.de/api/v1/</string>
    <string name="settings_sync_ns_secret_title">API Secret</string>
    <string name="settings_sync_ns_historic_summary">Download Nightscout data of the last 2 years</string>
    <string name="settings_sync_ns_historic_title">Historic Download</string>
    <string name="settings_prediction_model_select_description">Which kind of model to use for BG Predictions</string>
    <string name="settings_prediction_model_select_title">Model type</string>
    <string name="settings_prediction_category_ai_description">Settings for the AI Predictions</string>
    <string name="settings_prediction_category_ai_title">AI Predictions</string>
    <string name="settings_prediction_model_path_description">Path to the model (.tflite)</string>
    <string name="settings_prediction_model_path_title">Path to model</string>
    <string name="event_log_no_entries">No Entries</string>
    <string name="event_log_hide_alert_title">Hide event(s)?</string>
    <string name="event_log_hide_alert_message">This will hide the selected event(s).\nHiding events will NOT revert their impact on calculations.\n\nThis action cannot be undone.</string>
    <string name="event_log_hide_alert_cancel">ABORT</string>
    <string name="event_log_hide_alert_ok">OK</string>
    <string name="alert_label_info">info</string>
    <string name="alert_label_warning">warning</string>
    <string name="alert_label_urgent">urgent</string>
    <string name="alert_undo_text">Alert dismissed</string>
    <string name="alert_undo_action">Undo</string>
    <string name="title_activity_alert_history">History</string>
    <string name="assistant_peek_title_none">All done!</string>
    <string name="assistant_peek_title_info">Info available</string>
    <string name="assistant_peek_title_warning">Warning</string>
    <string name="assistant_peek_title_urgent">Urgent Alert</string>
    <string name="assistant_peek_description">notification(s) available</string>
    <string name="assistant_sheet_current_alerts">Current Alerts</string>
    <string name="assistant_sheet_clear_all">Clear All</string>
    <string name="assistant_sheet_no_alerts">No Alerts</string>
    <string name="assistant_sheet_settings">Notification Settings</string>
    <string name="assistant_sheet_history">Previous Alerts</string>
    <string name="assistant_sheet_close_hint">Swipe down to close</string>
    <string name="bolus_limit_exceeded_label">Limit exceeded</string>
    <string name="recommended_dosage_label">Recommended dosage</string>
    <string name="tap_label">(Tap for more details)</string>
    <string name="bolus_calculator_title">Bolus Calculator</string>
    <string name="carbs_label">How many carbs?</string>
    <string name="bg_label">BG level (optional)</string>
    <string name="time_label">Carbs time (optional)</string>
    <string name="correction_label">Correction (optional)</string>
    <string name="developer_mode_opening">Opening developer interface</string>
    <string name="bolus_explanation_title">Bolus calculation details</string>
    <string name="bolus_explanation_back_button">Close</string>
    <string name="bolus_explanation"><![CDATA[<b>Trend</b>: %1$.3f<br/><b>Carbs I/C</b>: %2$.3f<br/><b>Blood Glucose</b>: %3$.3f]]></string>
    <string name="title_activity_download_model">Download Tool</string>
    <string name="download_model_start">Updating prediction model, please wait</string>
    <string name="download_model_finished">Prediction model updated</string>
    <string name="download_model_failed">Could not update prediction model</string>
    <string name="download_model_failed_action">Report</string>
    <string name="model_activation_failed_title">Could not activate model</string>
    <string name="model_activation_failed_message">The activation of this model failed, using backup model.\nSend error report?</string>
    <string name="model_activation_failed_send">SEND</string>
    <string name="model_activation_failed_dont_send">IGNORE</string>
    <string name="setupwizard_welcome_title">Setup Wizard</string>
    <string name="setupwizard_permission_title">Permission Request</string>
    <string name="setupwizard_datacontribution_title">Data Contribution</string>
    <string name="setupwizard_demo_title">Demo Mode</string>
    <string name="setupwizard_completed_title">Wizard Completed</string>
    <string name="setupwizard_licenseagreement_title">License Agreement</string>
    <string name="setupwizard_welcome_text">"### Welcome to DiaBEATit!  \nWe appreciate that you want to support our research to improve diabetes therapy!  \n\nAfter a few simple setup steps the app is ready to use. This setup wizard will guide you through the setup process."</string>
    <string name="setupwizard_licenseagreement_text">
        ### License Agreement of DiaBEATit  \n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.  \n\n
        Click [here](https://github.com/juehv/DiaBEATit/blob/master/LICENSE.txt) for the full license text.
    </string>
    <string name="setupwizard_datacontribution_text">The DiaBEATit app is intended for demonstration purposes and as research tool. This means in particular:  \n* It **MUST NOT** be used to make medical decisions.  \n* It will run experimental algorithms which are potentially not bug free  \n* It will gather your health data and send it to us in anonymised form.</string>
    <string name="setupwizard_storagepermission_text">### Backup Service  \nThe app will save its gathered data, settings, evaluation results, and your progress on the phones storage. Therefore we need storage permission.</string>
    <string name="setupwizard_locationpermission_text">### Suggestion Service  \nThe assistent service of this app will generate suggestions and reminders for treatments. Therefore the assistent will observer health data and your daily routine including locations. Therefore we need location permission. This data will not be shared.</string>
    <string name="setupwizard_demomode_text">### App Demonstration  \nFor demonstration purposes you can start the app in Demo-Mode. The app will behave identically but will use fake data. We desined the fake data input in a way to demonstrate all functions of the app within a week. We took care that you will not get disturbed at night.  \n\n**Note:** To deactivate the demonstration mode, please reinstall the app to ensure a consistent database.</string>
    <string name="setupwizard_thankyou_text">### Setup completed!  \nAll done! **Please reopen the App after pressing the finish button.**  \n\n You may want to take a look into the settings and set up your cloud sync options.  \n\nWe wish you much fun using our app!</string>
    <string name="setupwizard_demomode_warning_text">The Demo Mode already wrote data to the database. To disable Demo Mode please reinstall the app. This ensures database consistency.</string>
    <string name="setupwizard_demomode_warning_title">Can\'t disable Demo Mode</string>
    <string name="setupwizard_error_permission_missing_title">Permission Missing</string>
    <string name="setupwizard_error_permission_missing_text">You have to grand requested permissions to finish the setup.</string>
    <string name="setupwizard_error_license_missing_title">License agreements not accepted</string>
</resources>