<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_1st_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_assistant"
            android:icon="@drawable/d_ic_home"
            android:title="@string/nav_assistant" />

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_log" />
    </group>


    <group
        android:id="@+id/nav_2nd_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/d_ic_settings_alt"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help" />
    </group>
</menu>
