<?xml version=".0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".diabeatit.ui.home.BolusCalculatorFragment">

    <TextView
        android:id="@+id/bc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorFont"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/bolus_calculator_title" />

    <EditText
        android:id="@+id/bc_carbs_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/bc_title"
        android:gravity="center_horizontal"
        style="@style/diabeatit.EditText"
        android:inputType="number"
        android:textColor="@color/colorFont"
        android:textColorHint="#777777"
        android:hint="@string/carbs_label" />

    <LinearLayout
        android:id="@+id/bc_extra_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bc_carbs_input"
        android:paddingHorizontal="8dp"
        android:background="@drawable/label_gray"
        android:backgroundTint="#F0F0F0"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/bc_extra_bg_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            style="@style/diabeatit.EditText"
            android:inputType="number"
            android:textColor="@color/colorFont"
            android:textColorHint="#6F6F6F"
            android:hint="@string/bg_label" />

        <EditText
            android:id="@+id/bc_extra_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            style="@style/diabeatit.EditText"
            android:inputType="number"
            android:textColor="@color/colorFont"
            android:textColorHint="#6F6F6F"
            android:hint="@string/time_label" />

        <EditText
            android:id="@+id/bc_extra_correction_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            style="@style/diabeatit.EditText"
            android:inputType="number"
            android:textColor="@color/colorFont"
            android:textColorHint="#6F6F6F"
            android:hint="@string/correction_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/bc_dosage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bc_extra_input_layout"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorFont"
        android:text="@string/recommended_dosage_label" />

    <TextView
        android:id="@+id/bc_tap_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bc_dosage_label"
        android:textColor="#A0A0A0"
        android:text="@string/tap_label" />

    <TextView
        android:id="@+id/bc_bolus_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bc_tap_label"
        android:layout_marginVertical="4dp"
        android:textColor="@color/colorFont"
        android:textSize="36sp"
        android:text="N/A" />

    <Button
        android:id="@+id/bc_button_bolus_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/bc_dosage_label"
        android:layout_alignBottom="@id/bc_bolus_result"
        android:layout_alignStart="@id/bc_dosage_label"
        android:layout_alignEnd="@id/bc_dosage_label"
        android:layout_toEndOf="@id/bc_bolus_result"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:id="@+id/bc_limit_exceeded"
        android:background="@drawable/label_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/bc_bolus_result"
        android:text="@string/bolus_limit_exceeded_label"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

</RelativeLayout>