<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_cardview"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/alert_empty_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:textStyle="italic"
        android:textSize="14sp"
        android:textColor="#666666"
        android:text="@string/assistant_sheet_no_alerts" />

    <include layout="@layout/d_assistant_card_list" />

    <Button
        android:id="@+id/alert_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_clear_all"
        android:drawableTint="#888888"
        android:drawablePadding="8dp"
        android:textSize="14sp"
        android:textColor="#666666"
        android:textAllCaps="true"
        android:text="@string/assistant_sheet_clear_all" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <androidx.cardview.widget.CardView
        style="@style/diabeatit"
        android:theme="@style/diabeatit.AssistantButton"
        xmlns:card="http://schemas.android.com/apk/res-auto"
        android:id="@+id/alert_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        card:cardCornerRadius="8dp"
        card:contentPadding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/assistant_sheet_settings"
            android:drawableStart="@drawable/ic_settings_alt"
            android:drawableTint="#888888" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/diabeatit"
        android:theme="@style/diabeatit.AssistantButton"
        xmlns:card="http://schemas.android.com/apk/res-auto"
        android:id="@+id/alert_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        card:cardCornerRadius="8dp"
        card:contentPadding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/assistant_sheet_history"
            android:drawableStart="@drawable/ic_history"
            android:drawableTint="#888888" />

    </androidx.cardview.widget.CardView>

</LinearLayout>