<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/diabeatit.Container" >

    <TextView
        android:id="@+id/mn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textColor="@color/colorFont"
        android:text="@string/mn_title" />

    <EditText
        android:id="@+id/mn_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mn_title"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        style="@style/diabeatit.EditText"
        android:textColor="@color/colorFont"
        android:textColorHint="#777777"
        android:hint="@string/mn_notes_hint" />

    <LinearLayout
        android:id="@+id/mn_datetime_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/mn_notes"
        android:gravity="center_horizontal"
        android:layout_marginVertical="8dp" >

        <Button
            android:id="@+id/mn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:padding="8dp"
            android:background="#EFEFEF"
            android:drawableStart="@drawable/ic_date"
            android:drawableTint="#777777"
            android:drawablePadding="8dp"
            android:textColor="#777777"
            android:textStyle="bold"
            android:text="--.--.----" />

        <Button
            android:id="@+id/mn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:background="#EFEFEF"
            android:drawableStart="@drawable/ic_time"
            android:drawableTint="#777777"
            android:drawablePadding="8dp"
            android:textColor="#777777"
            android:textStyle="bold"
            android:text="--:--" />

    </LinearLayout>

    <Button
        android:id="@+id/mn_picture_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mn_datetime_layout"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:background="#EFEFEF"
        android:drawableStart="@drawable/ic_camera"
        android:drawableTint="#777777"
        android:drawablePadding="8dp"
        android:textColor="#777777"
        android:textStyle="bold"
        android:text="@string/mn_picture_attach" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/mn_picture_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mn_picture_set"
        android:layout_above="@id/mn_save"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <ImageButton
        android:visibility="gone"
        android:id="@+id/mn_picture_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mn_picture_preview"
        android:layout_alignBottom="@id/mn_picture_preview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:tint="#FF0000"
        android:src="@drawable/ic_delete" />

    <Button
        android:id="@+id/mn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:background="#EFEFEF"
        android:textColor="#777777"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/mn_save" />

</RelativeLayout>